[project]
name = "cbz-converter"
version = "0.1.0"
description = "A python based pdf-cbz converter"
authors = [
    {name = "gabrielbaute",email = "gabrielbaute@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bumpver (>=2024.1130,<2025.0)",
    "rich (>=14.0.0,<15.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "fitz (>=0.0.1.dev2,<0.0.2)"
]

[tool.poetry.scripts]
cbz = "cbz_convert.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
